# IntentChatBot

./: docker-compose.yml
Backend/: .dockerignore  Dockerfile  pyproject.toml
Backend/app/: main.py
Backend/app/api/: routes.py  schemas.py
Backend/app/data/: faq.md  profile.json  projekte.md
Backend/app/model/: data_manager.py  intent_handler.py  nlp_engine.py  nlp_engine_spacy.py
Backend/app/model/old/: intent_handler.py
Backend/app/notebooks/: pytorch.ipynb
Backend/data/saved_models/: chat_model.pth
Backend/ml_engine/: inference.py  nltk_utils.py  pytorch_helper.py  train.py
Backend/ml_engine/data/: intents.json  sentiment.json
Backend/ml_engine/data/saved_models/: chat_model.pth  sentiment_model.pth
Backend/ml_engine/intent/: inference.py  model.py  train.py
Backend/ml_engine/intent/test/: test_nltk_utils.py
Backend/ml_engine/sentiment/: model.py  train.py
Backend/ml_engine/test/: test_nltk_utils.py
Backend/ml_engine/utils/: nltk_utils.py
Frontend/fronted/: index.html  package-lock.json
Frontend/fronted/src/: App.jsx
Frontend/frontend/: Dockerfile  index.html  package-lock.json  package.json
Frontend/frontend/src/: App.jsx  index.css
Frontend/frontend/src/components/: ChatArea.jsx  Layout.jsx  Message.jsx  Sidebar.jsx
