[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "pip>=26.0",
    "spacy>=3.8.11",
    "uvicorn[standard]>=0.34.0",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    "nltk>=3.9.2",
    "torch>=2.10.0",
]
